--- a/test/test.html
+++ b/test/test.html
@@ -14,11 +14,11 @@
         <br><br><br><br>
         <h2>test chatbot widget</h2>
         <!-- -->
-        <script type="text/javascript" src="http://localhost:9001/widget.js?a8787as07d09a7ds09a09dp1jp31jp32"></script>
+        <script type="text/javascript" src="http://localhost:9001/widget.js?v2"></script>
         <script>
             window.addEventListener('load',function () {
                 window.initChatbotWidget({
-                    idAgent: '5dc1e10a0038b92890d5b851',
+                    idAgent: '5dd5d7bdc658e611408ebed9',
                     defaultStyle:{
                         fontSize:'22px'
                     }
