welcome intent and carousel widget

--- a/test/test.html
+++ b/test/test.html
@@ -18,7 +18,12 @@
         <script>
             window.addEventListener('load',function () {
                 window.initChatbotWidget({
-                    idAgent: '5dd5d7bdc658e611408ebed9',
+                    idAgent: '5de557d27523b70de816b120',
+                    options:{
+                        botName: 'Nose, es lo que hay',
+                        botSubtitle: 'Menos.sss',
+                        senderPlaceholder: 'escribiiii'
+                    },
                     defaultStyle:{
                         fontSize:'22px'
                     }
