--- a/test/test.html
+++ b/test/test.html
@@ -17,7 +17,7 @@
         <script type="text/javascript" src="http://localhost:9001/widget.js?v2"></script>
         <script>
             window.addEventListener('load',function () {
-                window.initChatbotWidget({
+                window.waiboc.initChatbotWidget({
                     idAgent: '5df990135940bb454c846a1e',
                     options:{
                         botName: 'Nose, es lo que hay',
